update hero section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="main" id="main">
             <div class="grid" id="Hexa">
                 <h1>We Are Hexashop</h1>
-                <span>Awesome, clean & creative HTML5 Template</span>
+                <span>Creative & Latest Fashion Cloths</span>
                 <span class="button"><a href="#">Purchase Now!</a></span>
             </div>
             <div class="grid" id="mens">
